Initial Day 6 Solutions Update
- Renamed solultions notebook noting that it will only contain week 1 solution
- Added data for day6 problems
- Added initial day6 solutions

--- a/AoC2020 Week1 Solutions.ipynb
+++ b/AoC2020 Week1 Solutions.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import itertools\n",
     "import numpy as np\n",
-    "import string"
+    "import string\n",
+    "from functools import reduce"
    ]
   },
   {
@@ -84,7 +85,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 12 ms\n"
+      "Wall time: 11.9 ms\n"
      ]
     }
    ],
@@ -119,7 +120,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 8.98 ms\n"
+      "Wall time: 7.98 ms\n"
      ]
     }
    ],
@@ -148,7 +149,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 997 µs\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -201,7 +202,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.2 s\n"
+      "Wall time: 1.07 s\n"
      ]
     }
    ],
@@ -235,7 +236,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 426 ms\n"
+      "Wall time: 423 ms\n"
      ]
     }
    ],
@@ -264,7 +265,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 1.01 ms\n"
      ]
     }
    ],
@@ -314,7 +315,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 22 ms\n"
+      "Wall time: 34.9 ms\n"
      ]
     }
    ],
@@ -407,7 +408,7 @@
      "output_type": "stream",
      "text": [
       "460\n",
-      "Wall time: 1.99 ms\n"
+      "Wall time: 2 ms\n"
      ]
     }
    ],
@@ -443,7 +444,7 @@
      "output_type": "stream",
      "text": [
       "460\n",
-      "Wall time: 2.01 ms\n"
+      "Wall time: 1.99 ms\n"
      ]
     }
    ],
@@ -495,7 +496,7 @@
      "output_type": "stream",
      "text": [
       "251\n",
-      "Wall time: 1.98 ms\n"
+      "Wall time: 1.02 ms\n"
      ]
     }
    ],
@@ -530,7 +531,7 @@
      "output_type": "stream",
      "text": [
       "251\n",
-      "Wall time: 1.03 ms\n"
+      "Wall time: 998 µs\n"
      ]
     }
    ],
@@ -596,7 +597,7 @@
      "output_type": "stream",
      "text": [
       "250\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 988 µs\n"
      ]
     }
    ],
@@ -632,7 +633,7 @@
      "output_type": "stream",
      "text": [
       "250\n",
-      "Wall time: 1.03 ms\n"
+      "Wall time: 1 ms\n"
      ]
     }
    ],
@@ -684,7 +685,7 @@
      "output_type": "stream",
      "text": [
       "1592662500\n",
-      "Wall time: 2.99 ms\n"
+      "Wall time: 1.99 ms\n"
      ]
     }
    ],
@@ -726,7 +727,7 @@
      "output_type": "stream",
      "text": [
       "1592662500\n",
-      "Wall time: 977 µs\n"
+      "Wall time: 1.99 ms\n"
      ]
     }
    ],
@@ -759,7 +760,7 @@
      "output_type": "stream",
      "text": [
       "1592662500\n",
-      "Wall time: 1.99 ms\n"
+      "Wall time: 960 µs\n"
      ]
     }
    ],
@@ -891,7 +892,7 @@
      "output_type": "stream",
      "text": [
       "150\n",
-      "Wall time: 5.95 ms\n"
+      "Wall time: 7.98 ms\n"
      ]
     }
    ],
@@ -994,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1012,7 @@
      "output_type": "stream",
      "text": [
       "842\n",
-      "Wall time: 2.99 ms\n"
+      "Wall time: 3.99 ms\n"
      ]
     }
    ],
@@ -1051,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1060,7 @@
      "output_type": "stream",
      "text": [
       "617\n",
-      "Wall time: 2.99 ms\n"
+      "Wall time: 6.98 ms\n"
      ]
     }
    ],
@@ -1067,6 +1068,204 @@
     "%%time\n",
     "ids_sorted = np.sort([get_seat_id(row) for row in data])\n",
     "answer = next(id for i, id in enumerate(ids_sorted) if ids_sorted[i + 1] - id > 1) + 1\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 6\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "\"As your flight approaches the regional airport where you'll switch to a much larger plane, customs declaration forms are distributed to the passengers.\n",
+    "\n",
+    "The form asks a series of 26 yes-or-no questions marked a through z. All you need to do is identify the questions for which anyone in your group answers \"yes\". Since your group is just you, this doesn't take very long.\n",
+    "\n",
+    "However, the person sitting next to you seems to be experiencing a language barrier and asks if you can help. For each of the people in their group, you write down the questions for which they answer \"yes\", one per line. For example:\n",
+    "```\n",
+    "abcx\n",
+    "abcy\n",
+    "abcz\n",
+    "```\n",
+    "\n",
+    "In this group, there are 6 questions to which anyone answered \"yes\": a, b, c, x, y, and z. (Duplicate answers to the same question don't count extra; each question counts at most once.)\n",
+    "\n",
+    "Another group asks for your help, then another, and eventually you've collected answers from every group on the plane (your puzzle input). Each group's answers are separated by a blank line, and within each group, each person's answers are on a single line. For example:\n",
+    "\n",
+    "```\n",
+    "abc\n",
+    "\n",
+    "a\n",
+    "b\n",
+    "c\n",
+    "\n",
+    "ab\n",
+    "ac\n",
+    "\n",
+    "a\n",
+    "a\n",
+    "a\n",
+    "a\n",
+    "\n",
+    "b\n",
+    "```\n",
+    "\n",
+    "For each group, count the number of questions to which anyone answered \"yes\". What is the sum of those counts?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6778\n",
+      "Wall time: 3.99 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "file = open('./data/day6_question_data.txt', 'r')\n",
+    "question_data = []\n",
+    "data = \"\"\n",
+    "for line in file:\n",
+    "    if line  == \"\\n\":\n",
+    "        question_data.append(data)\n",
+    "        data = \"\"\n",
+    "    else:\n",
+    "        data += line.replace('\\n', '')\n",
+    "\n",
+    "answer = sum(len(set(row)) for row in question_data)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "\"As you finish the last group's customs declaration, you notice that you misread one word in the instructions:\n",
+    "\n",
+    "You don't need to identify the questions to which anyone answered \"yes\"; you need to identify the questions to which everyone answered \"yes\"!\n",
+    "\n",
+    "Using the same example as above:\n",
+    "\n",
+    "```\n",
+    "abc\n",
+    "\n",
+    "a\n",
+    "b\n",
+    "c\n",
+    "\n",
+    "ab\n",
+    "ac\n",
+    "\n",
+    "a\n",
+    "a\n",
+    "a\n",
+    "a\n",
+    "\n",
+    "b\n",
+    "```\n",
+    "\n",
+    "This list represents answers from five groups:\n",
+    "\n",
+    "- In the first group, everyone (all 1 person) answered \"yes\" to 3 questions: a, b, and c.\n",
+    "- In the second group, there is no question to which everyone answered \"yes\".\n",
+    "- In the third group, everyone answered yes to only 1 question, a. Since some people did not answer \"yes\" to b or c, they don't count.\n",
+    "- In the fourth group, everyone answered yes to only 1 question, a.\n",
+    "- In the fifth group, everyone (all 1 person) answered \"yes\" to 1 question, b.\n",
+    "- In this example, the sum of these counts is 3 + 0 + 1 + 1 + 1 = 6.\n",
+    "\n",
+    "For each group, count the number of questions to which everyone answered \"yes\". What is the sum of those counts?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alphabet loop solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3406\n",
+      "Wall time: 14 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "file = open('./data/day6_question_data.txt', 'r')\n",
+    "question_data = []\n",
+    "data = \"\"\n",
+    "for line in file:\n",
+    "    if line  == \"\\n\":\n",
+    "        question_data.append(data)\n",
+    "        data = \"\"\n",
+    "    else:\n",
+    "        data += line.replace('\\n', ' ')\n",
+    "        \n",
+    "def get_all_yes(row):\n",
+    "    entries = row.split()\n",
+    "    return sum(all([c in entry for entry in entries]) for c in string.ascii_lowercase)\n",
+    "\n",
+    "answer = sum(get_all_yes(row) for row in question_data)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Faster set-based solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3406\n",
+      "Wall time: 5.98 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "file = open('./data/day6_question_data.txt', 'r')\n",
+    "question_data = []\n",
+    "data = \"\"\n",
+    "for line in file:\n",
+    "    if line  == \"\\n\":\n",
+    "        question_data.append(data)\n",
+    "        data = \"\"\n",
+    "    else:\n",
+    "        data += line.replace('\\n', ' ')\n",
+    "        \n",
+    "def get_all_yes(row):\n",
+    "    entries = row.split()\n",
+    "    return len(reduce(set.intersection, [set(entry) for entry in entries]))\n",
+    "\n",
+    "answer = sum(get_all_yes(row) for row in question_data)\n",
     "print(answer)"
    ]
   },
